--- a/public/images/Item.module.scss
+++ b/public/images/Item.module.scss
@@ -1,4 +1,4 @@
-/* Estilos de las cartas, funciona para el componente Item como para el componente ItemDetail*/
+/* Estilos de las cartas*/
 
 .imgCard {
     width: 100%;
