Events are added to the add to cart button

--- a/src/components/Item.module.scss
+++ b/src/components/Item.module.scss
@@ -70,7 +70,7 @@ p {
 //     text-decoration: none;
 // }
 .enlaceBoton {
-    width: 80px;
+    width: 110px;
     text-decoration: none;
     text-align: center;
     border: none;
@@ -79,7 +79,7 @@ p {
     box-shadow: 3px 3px 3px black;
     font-weight: 600;
     color: #666666;
-    background-color: #ffffcc;
+    background-color: #b0c2f2;
     margin: 0 auto;
     display: block;
     cursor: pointer;
