--- a/src/components/ItemListContainer.module.scss
+++ b/src/components/ItemListContainer.module.scss
@@ -3,5 +3,5 @@
     justify-content: center;
     margin: 0 auto;
     font-weight: bold;
-    background-color: #FEF9E7;
+    background-color: #fcb7af;
 }
