--- a/src/components/ProgressBar.module.scss
+++ b/src/components/ProgressBar.module.scss
@@ -3,8 +3,8 @@
 }
 
 .loader {
-    width: 60px;
-    height: 60px;
+    width: 15rem;
+    height: 15rem;
     position: absolute;
     top: 40%;
     left: 40%;
