--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import './normalize.css';
 body {
-    background-color: #fcb7af;
+    /* background-color: #fcb7af; */
+    background-color: #FFFCF0;
 }
